feat(pipe): debug pipe

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -171,6 +171,9 @@ jobs:
           
           # Cleanup target folder
           sudo rm -rf target/*/release/build target/*/release/deps 
+          
+          ls -la target/${{ matrix.target }}/release
+          tree target
 
       - name: Upload static application binaries
         uses: actions/upload-artifact@v2
