--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -190,11 +190,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download static application binaries
+      - name: Download x86_64-musl static application binary
         uses: actions/download-artifact@v2
         with:
           name: x86_64-musl
-          path: .
+          path: target
 
       - name: Debug
         run: |
@@ -244,18 +244,22 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: x86_64-musl
+          path: target
       - name: Download aarch64-musl binary
         uses: actions/download-artifact@v2
         with:
           name: aarch64-musl
+          path: target
       - name: Download armv7-musleabihf binary
         uses: actions/download-artifact@v2
         with:
           name: armv7-musleabihf
+          path: target
       - name: Download arm-musleabihf binary
         uses: actions/download-artifact@v2
         with:
           name: arm-musleabihf
+          path: target
 
       # Create a new release based on semantic versioning
       - name: Set up Node.js
@@ -322,18 +326,22 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: x86_64-musl
+          path: target
       - name: Download aarch64-musl binary
         uses: actions/download-artifact@v2
         with:
           name: aarch64-musl
+          path: target
       - name: Download armv7-musleabihf binary
         uses: actions/download-artifact@v2
         with:
           name: armv7-musleabihf
+          path: target
       - name: Download arm-musleabihf binary
         uses: actions/download-artifact@v2
         with:
           name: arm-musleabihf
+          path: target
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
