--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -166,6 +166,9 @@ jobs:
           # Prepare rust-cross/rust-musl-cross for cross compiling
           source prep-build-env.sh
           
+          # Cleanup target dir
+          sudo rm -rf target
+          
           # Compile the desired target
           build-rust-static-bin ${{ matrix.target }}
           
