feat(pipe): debug pipe

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -173,6 +173,10 @@ jobs:
           # Compile the desired target
           build-rust-static-bin ${{ matrix.target }}
           
+          # Stage the binary for the next step
+          mkdir -p target/staged
+          bash stage-arch-bin.sh this-week-in-past
+          
           ls -la target
           file target/**/this-week-in-past
 
@@ -180,7 +184,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target }}
-          path: ./${{ matrix.target }}/release/this-week-in-past
+          path: ./this-week-in-past
 
 
   test-container-image:
