--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -170,13 +170,15 @@ jobs:
           build-rust-static-bin ${{ matrix.target }}
           
           # Translate ${{ matrix.target }} to rust target triple
-          echo "::set-output name=TARGET_TRIPPLE::$(bash translate-arch-to-rust-tripple.sh)"
+          # FIXME: The set output command does not work
+          export TARGET_TRIPPLE=$(bash translate-arch-to-rust-tripple.sh)
+          echo "::set-env name=TARGET_TRIPPLE::$TARGET_TRIPPLE"
 
       - name: Upload static application binaries
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.target }}
-          path: target/${{ steps.build-binaries.outputs.TARGET_TRIPPLE }}/release/this-week-in-past
+          path: target/$TARGET_TRIPPLE/release/this-week-in-past
 
 
   test-container-image:
