fix(pipeline): set correct image tag

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -22,6 +22,8 @@ jobs:
           else
             echo "IMAGE_TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_ENV
           fi
+          
+          echo "Image tag was set to $IMAGE_TAG"
 
   check-oci-config:
     name: Check Containerfile
