--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -18,8 +18,10 @@ jobs:
       - name: Set image tag
         run: |
           if [ -z "${{github.event.pull_request.number}}" ]; then
+            echo "IMAGE_TAG=latest"
             echo "IMAGE_TAG=latest" >> $GITHUB_OUTPUT
           else
+            echo "IMAGE_TAG=PR-${{github.event.pull_request.number}}"
             echo "IMAGE_TAG=PR-${{github.event.pull_request.number}}" >> $GITHUB_OUTPUT
           fi
           
