--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -22,9 +22,9 @@ jobs:
           
           if [[ "$GITHUB_REF" == "refs/heads/main" ]]; then
             IMAGE_TAG="latest"
-          elif [ -n "${{ PR-github.event.issue.number }}" ]; then
+          elif [ -n "${{ github.event.issue.number }}" ]; then
             IMAGE_TAG="ISSUE-${{ github.event.issue.number }}"
-          elif [ -n "${{ PR-github.event.pull_request.number }}" ];then
+          elif [ -n "${{ github.event.pull_request.number }}" ];then
             IMAGE_TAG="PR-${{ github.event.pull_request.number }}"
           else
             IMAGE_TAG="PR-$(echo -n $GITHUB_REF_NAME | md5sum | cut -c1-6)"
@@ -32,6 +32,7 @@ jobs:
           
           echo "IMAGE_TAG: $IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
+
     outputs:
       IMAGE_TAG: ${{ steps.set_image_tag.outputs.IMAGE_TAG }}
 
