--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -295,10 +295,7 @@ jobs:
 
       - name: Get release upload url
         run: |
-          export UPLOAD_URL=$(curl \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/rouhim/this-week-in-past/releases | jq ".[0].upload_url")
+          export UPLOAD_URL=$(curl -s https://api.github.com/repos/RouHim/this-week-in-past/releases/latest | jq '.upload_url')
           echo "UPLOAD_URL=${UPLOAD_URL}"
           echo "UPLOAD_URL=${UPLOAD_URL}" >> $GITHUB_ENV
 
