--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -299,6 +299,10 @@ jobs:
           echo "UPLOAD_URL=${UPLOAD_URL}"
           echo "UPLOAD_URL=${UPLOAD_URL}" >> $GITHUB_ENV
 
+      - name: Debug
+        run: |
+          echo "Upload url: ${{ env.UPLOAD_URL }}"
+
       - name: Upload the x86 built binaries to the release
         uses: actions/upload-release-asset@v1
         env:
